Move to classical require

--- a/docs/contributing-guide.adoc
+++ b/docs/contributing-guide.adoc
@@ -34,7 +34,7 @@ npm run lint
 [source,javascript]
 ----
 var config = require('./mobile-config.json')
-import { ConfigService } from '@aerogearservices/core'
+var ConfigService = require('@aerogearservices/core').ConfigService;
 
 var config = new ConfigService(config);
 ----
