--- a/docs/core.adoc
+++ b/docs/core.adoc
@@ -13,7 +13,7 @@ It's main features are:
 Use the Cordova CLI to add the Core module as a plugin to your project:
 
 ----
-cordova plugin add @aerogearservices/Core
+cordova plugin add @aerogearservices/core-cordova
 ----
 
 This will install the package from the NPM registry and properly link all native dependencies to the project's cordova Platforms.
@@ -22,7 +22,7 @@ Refer to the link:./getting-started[Getting Started] guide for more information 
 
 == Usage
 
-After installation, the Core module will become available through the global `window.MobileCore` object in your project.
+After installation, the Core module will become available through the global `window.aerogear` object in your project.
 
 === Logging
 
