--- a/docs/releng.adoc
+++ b/docs/releng.adoc
@@ -1,19 +1,79 @@
-== JavaScript SDK Release process
+== SDK Release Documentation
 
-=== Prepare repository for release
+The release process results in new versions of the Core and associated SDKs being published on npm. The version numbers on all SDKs must always be the same.
 
-[source,bash]
+=== How Releases Work
+
+The release process takes place in CircleCI. CircleCI notices a new release being created and kicks off a special release workflow. The following steps take place:
+
+* A standard build job runs, i.e. the code is built and tested.
+* If the build is successful then a release job runs.
+  ** The each individual SDK is built and tested
+  ** Each individual SDK is published on npm.
+
+A small amount of preparation needs to take place before this process kicks off. Version numbers need to be updated accordingly using the scripts provided.
+
+=== How to Prepare a Release
+
+Ensure the git repo is clean and there are no outstanding changes. Then check out a new branch.
+
+[source, bash]
 --
-./scripts/prepareRelease.sh
+git checkout -b release-x.y.z
 --
 
-== Execute lerna publish
+**From the root directory** run the `prep-release` script.
 
-[source,bash]
+[source, bash]
 --
-npm run publish
+npm run prep-release
 --
 
-== Create PR with the new versions
+This script will interactively prompt you and ask what version you would like to update to. Select the appropriate version according to link:https://semver.org[Semver.]
 
-Commit local changes and create PR to update master with the latest versions
+[soruce,bash]
+--
+lerna info version 2.9.0
+lerna info current version 0.0.0
+lerna info Checking for updated packages...
+lerna info Comparing with initial commit.
+lerna info Checking for prereleased packages...
+? Select a new version (currently 0.0.0) Patch (0.0.1)
+
+Changes:
+ - @aerogear/auth: 0.1.0 => 0.0.1
+ - @aerogear/core: 0.1.0 => 0.0.1
+
+? Are you sure you want to publish the above changes? Yes
+Repository is ready for release.
+--
+
+Use `git status` to verify that the version numbers in the correct files have been updated.
+
+[source, bash]
+--
+$ git status
+On branch release-x.y.z
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+
+        modified:   lerna.json
+        modified:   packages/auth/package.json
+        modified:   packages/core/package.json
+--
+
+Commit and push these changes, then open a Pull Request to `master`.
+
+[source, bash]
+--
+git commit -am 'release version x.y.z'
+--
+
+Once your changes have been merged to master, you can continue and release to Cocoapods.
+
+=== How to Release
+
+To kick off a release to npm, simply link:https://help.github.com/articles/creating-releases/[Create a Release] in Github. **You must use the exact `x.y.z` format** for the release tag or the release will fail.
+
+This will kick off the automatic release process in CircleCI.
