--- a/docs/security/security.adoc
+++ b/docs/security/security.adoc
@@ -1,12 +1,12 @@
 = Cordova Security - Self Defence Checks
 
-As part of the Aerogear JS SDK module, there is a security self defence check package for cordova projects. This package offers multiple security checks that can be used to analyse the security of the device. This can be useful for apps to detect vulnerablities and react accordingly. For example, if the app detects security issue *X* then do *Y*, where *X* could be no lock screen is set and *Y* is show a system prompt to setup the lock screen.
+AeroGear JavaScript SDK offers a set of security features that will make sure that your application is meeting the modern OWASP recomendations. All security features are available as part of the separate `@aerogear/security`. This package offers multiple security checks that can be used to analyse the security of the device. This can be useful for developers to detect vulnerablities and react accordingly. For example, if the app detects security issue *X* then do *Y*, where *X* could be no lock screen is set and *Y* is show a system prompt to setup the lock screen.
 
 This package offers:
 
-1. A suite of self-defence checks to detect a compromised environment.
+1. A suite of self-defence checks to detect a insecure or hostile environment.
 2. Integration with the AeroGear Services Metrics SDK to report self-defence checks data.
-3. Interfaces to access the results of self-defence checks and take appropriate action in application code.
+3. Callbacks to access the results of self-defence checks and take appropriate action in application code.
 
 == Installation
 
@@ -28,11 +28,11 @@ This will install the packages needed with their native dependencies from the NP
 
 == Usage
 
-To begin using the self defence checks in your app, you'll need to import the following `SecurityService`, `SecurityCheckType` and `SecurityCheckResult` from `@aerogear/security`:
+To begin using the self defence checks in your app, you'll need to import `SecurityService` from `@aerogear/security`:
 
 [source,javascript]
 --
-import { SecurityService, SecurityCheckType, SecurityCheckResult } from '@aerogear/security'; 
+import { SecurityService } from '@aerogear/security'; 
 --
 
 You will also need to retrieve an instance of `SecurityService`:
@@ -42,13 +42,13 @@ You will also need to retrieve an instance of `SecurityService`:
 const securityService = new SecurityService();
 --
 
-=== Provided Self Defence Checks
+== Provided Self Defence Checks
 
 The following are the self defence checks provided by the SDK.
 
-*Important* A successful `check` means that the environment the application is running in is more secure than otherwise, as opposed to signalling if a certain feature is enabled.
+*Important* A successful `check` means that the environment the application is running in is more secure and no action is required, as opposed to signalling if a certain feature is enabled.
 
-For example, a check for whether the device is Rooted should return `true` when it is *not* rooted, since this would be the more secure condition.
+For example, the Root Access Detection check `notRooted` should return `true` when it is *not* rooted, since this would be the more secure condition.
 
 ==== Emulator Detection Check (notEmulated)
 
@@ -64,7 +64,7 @@ To detect if the app is runing in debug mode the `notDebugMode` function can be 
 
 ==== Device Lock Check (hasDeviceLock)
 
-To detect if a device has a lock screen set the `hasDeviceLock` function can be used. If the device *has* a screen lock enabled then this check will pass
+To detect if a device has a lock screen set the `hasDeviceLock` function can be used. If the device *has* a screen lock enabled then this check will pass.
 
 
 === Invoking a Single Self Defence Check
