--- a/docs/contrib/contributing-guide.adoc
+++ b/docs/contrib/contributing-guide.adoc
@@ -47,3 +47,16 @@ Finally, add the following link:../templates/tsconfig.json[`tsconfig.json`].
 == Publishing a module
 
 Please refer to the https://github.com/aerogear/aerogear-js-sdk/blob/master/docs/releng.adoc[Release Docs].
+
+== Showcase App
+
+Testing can be done using showcase application:
+
+https://github.com/aerogear/cordova-showcase-template
+
+Please follow showcase application contribution guide for instructions.
+To make sure that showcase application links the right source code please execute following commands.
+
+[source,bash]
+npm run build
+npm run link
