--- a/docs/modules/getting-started/pages/security.adoc
+++ b/docs/modules/getting-started/pages/security.adoc
@@ -5,8 +5,9 @@ AeroGear JavaScript SDK offers a set of security features that will make sure th
 This package offers:
 
 1. A suite of self-defence checks to detect a insecure or hostile environment.
-2. Integration with the AeroGear Services Metrics SDK to report self-defence checks data.
+2. Ability to implement custom self-defence checks.
 3. Callbacks to access the results of self-defence checks and take appropriate action in application code.
+4. Integration with the AeroGear Services Metrics SDK to report self-defence checks data.
 
 === Installation
 
