--- a/docs/contrib/contributing-guide.adoc
+++ b/docs/contrib/contributing-guide.adoc
@@ -50,13 +50,24 @@ Please refer to the https://github.com/aerogear/aerogear-js-sdk/blob/master/docs
 
 == Showcase App
 
-Testing can be done using showcase application:
+Testing can be done using the showcase application:
 
 https://github.com/aerogear/cordova-showcase-template
 
-Please follow showcase application contribution guide for instructions.
-To make sure that showcase application links the right source code please execute following commands.
+The master branch of the linked showcase application will always use the latest released sdk packages. However,
+if you wish to use the showcase application for SDK development then ensure you have linked the relevant packages locally as follows:
 
 [source,bash]
 npm run build
 npm run link
+
+If you wish, you may then also use the provided script cloneExamples.sh to clone the showcase application into the SDK's
+root folder.
+
+Once you have the showcase application cloned you can then run the following from within its root folder:
+
+[source, bash]
+npm install
+npm run linkDev
+
+Which will tell the showcase application to use the linked (local) version of the SDKs instead of the released ones.
