--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,1 +1,5 @@
-* xref:index.adoc[Overview]
+
+* xref:getting-started.adoc[Getting Started]
+** xref:auth.adoc[Auth]
+** xref:security-checks.adoc[Push]
+** xref:metrics.adoc[Metrics]
