--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,5 +1,5 @@
 
 * xref:getting-started.adoc[Getting Started]
-** xref:auth.adoc[Auth]
-** xref:security-checks.adoc[Push]
-** xref:metrics.adoc[Metrics]
+** xref:using-auth-sdk.adoc[Auth]
+** xref:adding-security-checks.adoc[Security]
+** xref:using-metrics-checks.adoc[Metrics]
