--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,5 +1,5 @@
 * xref:getting-started.adoc[Getting Started]
-** xref:auth.adoc[Auth]
-** xref:security-checks.adoc[Security]
-** xref:metrics.adoc[Metrics]
-** xref:push.adoc[Push]
+** xref:pages/auth.adoc[Auth]
+** xref:pages/security-checks.adoc[Security]
+** xref:pages/metrics.adoc[Metrics]
+** xref:pages/push.adoc[Push]
