--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -73,6 +73,22 @@
       "version-0.8.2/version-0.8.2-support": {
         "title": "Support",
         "sidebar_label": "Support"
+      },
+      "version-0.9.2/version-0.9.2-getting-started": {
+        "title": "Getting Started",
+        "sidebar_label": "Getting Started"
+      },
+      "version-0.9.2/version-0.9.2-client-configuration": {
+        "title": "Client Configuration",
+        "sidebar_label": "Client Configuration"
+      },
+      "version-0.9.2/version-0.9.2-offline-client": {
+        "title": "Offline Support",
+        "sidebar_label": "Offline Client"
+      },
+      "version-0.9.2/version-0.9.2-release-notes": {
+        "title": "What is new in Offix",
+        "sidebar_label": "Release notes"
       }
     },
     "links": {
