--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -62,6 +62,14 @@
         "title": "What is new in Offix",
         "sidebar_label": "Release notes"
       },
+      "version-0.11.0/version-0.11.0-getting-started": {
+        "title": "Getting Started",
+        "sidebar_label": "Getting Started"
+      },
+      "version-0.11.0/version-0.11.0-react-offix-hooks": {
+        "title": "React Offix Hooks",
+        "sidebar_label": "React Offix Hooks"
+      },
       "version-0.8.2/version-0.8.2-getting-started": {
         "title": "Getting Started",
         "sidebar_label": "Getting Started"
