--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -71,13 +71,29 @@
         "title": "What is new in Offix",
         "sidebar_label": "Release notes"
       },
+      "version-0.11.0/version-0.11.0-android": {
+        "title": "Android",
+        "sidebar_label": "Android"
+      },
       "version-0.11.0/version-0.11.0-getting-started": {
         "title": "Getting Started",
         "sidebar_label": "Getting Started"
       },
-      "version-0.11.0/version-0.11.0-react-offix-hooks": {
-        "title": "React Offix Hooks",
-        "sidebar_label": "React Offix Hooks"
+      "version-0.11.0/version-0.11.0-ionic": {
+        "title": "Ionic and Apache Cordova integration",
+        "sidebar_label": "Ionic and Cordova"
+      },
+      "version-0.11.0/version-0.11.0-react-native": {
+        "title": "React Native",
+        "sidebar_label": "React Native"
+      },
+      "version-0.11.0/version-0.11.0-react": {
+        "title": "React - using Offix Hooks",
+        "sidebar_label": "React"
+      },
+      "version-0.11.0/version-0.11.0-release-notes": {
+        "title": "What is new in Offix",
+        "sidebar_label": "Release notes"
       },
       "version-0.8.2/version-0.8.2-getting-started": {
         "title": "Getting Started",
@@ -135,7 +151,6 @@
       "Advanced topics": "Advanced topics",
       "Releases": "Releases",
       "Offix Client": "Offix Client",
-      "React": "React",
       "Offix Scheduler": "Offix Scheduler"
     }
   },
